_piku/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jnl.3756home.org
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer
    traefik.ingress.kubernetes.io/router.middlewares: cert-manager-redirect@kubernetescrd

spec:
  tls:
  - hosts:
    - jnl.3756home.org
    secretName: jnl
  rules:
    - host: jnl.3756home.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name:  piku-service
                port:
                  name: http
